respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Catalogo_SAT__c.object
<CustomObject>
    <description>Permite llevar el registro de los catalogos del SAT para la carta porte</description>
    <fields>
        <fullName>C_digo_Postal__c</fullName>
        <label>Código Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clave_Pais__c</fullName>
        <description>Permite catalogar de forma númerica la clave del pais</description>
        <label>Clave Pais</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clave_Relacion_SAT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clave Relacion</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Catalogos SAT</relationshipLabel>
        <relationshipName>Catalogos_SAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clave_SAT__c</fullName>
        <description>Catalgo SAT Clave del catalogo al que corresponde</description>
        <label>Clave SAT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codigo Postal</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Catalogos SAT (Codigo Postal)</relationshipLabel>
        <relationshipName>Catalogos_SAT2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descripci_n__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Descripcin_Config_AutotransporteCP__c</fullName>
        <label>Descripción Config Autotransporte</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion_CodigoPostal__c</fullName>
        <label>Descripcion CodigoPostal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA__c</fullName>
        <label>IATA</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Recordtype__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Recordtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Salesforce__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>ID Salesforce</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_nea_F_rrea__c</fullName>
        <label>Línea Férrea</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localidad_Ref_CP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Localidad Ref CP</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Catalogos SAT (Localidad Ref CP)</relationshipLabel>
        <relationshipName>Catalogos_SAT4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_PeligrosoCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material Peligroso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Municipio_Ref_CP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Codigo Postal Referenciado a Municipio</description>
        <label>Municipio Ref CP</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Catalogos SAT (Municipio Ref CP)</relationshipLabel>
        <relationshipName>Catalogos_SAT3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pais_RefCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pais RefCP</label>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Catalogos SAT (Pais RefCP)</relationshipLabel>
        <relationshipName>Catalogos_SAT1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recordtype_ID__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recordtype ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refrigerado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bandera para saber si el material requiere refrigeracion</description>
        <label>Refrigerado</label>
        <type>Checkbox</type>
    </fields>
    <label>Catalogo SAT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clave_Pais__c</field>
            <operation>contains</operation>
            <value>germany</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Clave_Transporte</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Cve_Transporte</value>
        </filters>
        <label>Clave Transporte</label>
    </listViews>
    <listViews>
        <fullName>Codigo_Postal</fullName>
        <columns>NAME</columns>
        <columns>Clave_Relacion_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Localidad_Ref_CP__c</columns>
        <columns>Municipio_Ref_CP__c</columns>
        <columns>Pais_RefCP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Codigo_Postal</value>
        </filters>
        <filters>
            <field>Codigo_Postal__c</field>
            <operation>equals</operation>
            <value>66443</value>
        </filters>
        <label>Codigo Postal</label>
    </listViews>
    <listViews>
        <fullName>Colonia</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>Codigo_Postal__c</columns>
        <columns>C_digo_Postal__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Clave_Relacion_SAT__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Colonia</value>
        </filters>
        <label>Colonia</label>
    </listViews>
    <listViews>
        <fullName>Configuraci_n_Transporte</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>Descripcin_Config_AutotransporteCP__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Configuracion_Autotrasporte</value>
        </filters>
        <label>Configuración Autotransporte</label>
    </listViews>
    <listViews>
        <fullName>Estaciones</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Estaciones</value>
        </filters>
        <label>Estaciones</label>
    </listViews>
    <listViews>
        <fullName>Estados</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Clave_SAT__c</columns>
        <columns>Clave_Relacion_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Estado</value>
        </filters>
        <label>Estados</label>
    </listViews>
    <listViews>
        <fullName>Fracci_n_Arancelaria</fullName>
        <columns>NAME</columns>
        <columns>Descripcin_Config_AutotransporteCP__c</columns>
        <columns>Clave_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Fraccion_Arancelaria</value>
        </filters>
        <filters>
            <field>Clave_SAT__c</field>
            <operation>contains</operation>
            <value>87082990</value>
        </filters>
        <label>Fracción Arancelaria</label>
    </listViews>
    <listViews>
        <fullName>Localidades</fullName>
        <columns>ID_Salesforce__c</columns>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>Clave_Relacion_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Localidad</value>
        </filters>
        <label>Localidades</label>
    </listViews>
    <listViews>
        <fullName>Material_Peligroso</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Descripcin_Config_AutotransporteCP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Material_Peligroso</value>
        </filters>
        <label>Material Peligroso</label>
    </listViews>
    <listViews>
        <fullName>Municipio</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>Clave_Relacion_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Municipio</value>
        </filters>
        <filters>
            <field>Clave_Relacion_SAT__c</field>
            <operation>contains</operation>
            <value>nuevo</value>
        </filters>
        <label>Municipio</label>
    </listViews>
    <listViews>
        <fullName>Pais</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Pais</value>
        </filters>
        <label>Pais</label>
    </listViews>
    <listViews>
        <fullName>Productos_y_Servicio</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>Clave_Relacion_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Material_PeligrosoCP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Productos_y_Servicios_cP</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>pesc</value>
        </filters>
        <label>Productos y Servicio</label>
    </listViews>
    <listViews>
        <fullName>Tipo_de_Embalaje</fullName>
        <columns>NAME</columns>
        <columns>Descripcin_Config_AutotransporteCP__c</columns>
        <columns>Clave_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Tipo_Embalaje</value>
        </filters>
        <label>Tipo de Embalaje</label>
    </listViews>
    <listViews>
        <fullName>Tipo_de_Estaci_n</fullName>
        <columns>NAME</columns>
        <columns>Clave_SAT__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalogo_SAT__c.Tipo_de_Estacion</value>
        </filters>
        <label>Tipo de Estación</label>
    </listViews>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogos SAT</pluralLabel>
    <recordTypes>
        <fullName>Codigo_Postal</fullName>
        <active>true</active>
        <description>Catalogo del SAT c_Colonias</description>
        <label>Codigo Postal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Colonia</fullName>
        <active>true</active>
        <description>Catalogo el Sat c_Colonias</description>
        <label>Colonia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Configuracion_Autotrasporte</fullName>
        <active>true</active>
        <description>Catálogo de configuración autotransporte federal</description>
        <label>Configuracion Autotransporte</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cve_Transporte</fullName>
        <active>true</active>
        <description>Catálogo de la clave del transporte Versión 1.0</description>
        <label>Cve Transporte</label>
    </recordTypes>
    <recordTypes>
        <fullName>Estaciones</fullName>
        <active>true</active>
        <description>Catálogo de tipo de estación</description>
        <label>Estaciones</label>
    </recordTypes>
    <recordTypes>
        <fullName>Estado</fullName>
        <active>true</active>
        <description>Describe el Estado con base al catalogo SAT c_Estado</description>
        <label>Estado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fraccion_Arancelaria</fullName>
        <active>true</active>
        <description>Catalogo de Fracción Arancelaria</description>
        <label>Fraccion Arancelaria</label>
    </recordTypes>
    <recordTypes>
        <fullName>Localidad</fullName>
        <active>true</active>
        <description>Describe la localidad con base al catalogo SAT c_Localidad</description>
        <label>Localidad</label>
    </recordTypes>
    <recordTypes>
        <fullName>Material_Peligroso</fullName>
        <active>true</active>
        <description>Catálogo de materiales peligrosos</description>
        <label>Material Peligroso</label>
    </recordTypes>
    <recordTypes>
        <fullName>Municipio</fullName>
        <active>true</active>
        <description>Describe el municipio con base al catálogo c_municipio</description>
        <label>Municipio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pais</fullName>
        <active>true</active>
        <description>Describe el Pais</description>
        <label>Pais</label>
    </recordTypes>
    <recordTypes>
        <fullName>Productos_y_Servicios_cP</fullName>
        <active>true</active>
        <description>Catálogo de productos y servicios carta porte</description>
        <label>Productos y Servicios cP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sin_Categoria</fullName>
        <active>true</active>
        <description>Default</description>
        <label>Sin Categoria</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tipo_Embalaje</fullName>
        <active>true</active>
        <description>Catálogo de tipo de embalaje</description>
        <label>Tipo de Embalaje</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tipo_de_Estacion</fullName>
        <active>true</active>
        <description>Catálogo de tipo de estación</description>
        <label>Tipo de Estacion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tipo_de_Permiso</fullName>
        <active>true</active>
        <description>Catálogo tipo permiso</description>
        <label>Tipo de Permiso</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tipo_de_Remolque</fullName>
        <active>true</active>
        <description>Catálogo de tipo de remolque</description>
        <label>Tipo de Remolque</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unidad_Peso</fullName>
        <active>true</active>
        <description>Catálogo de unidades de medida y embalaje</description>
        <label>Unidad Peso</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>